force-app/main/default/objects/Saved_Address__c/Saved_Address__c.object-meta.xml
<CustomObject>
    <label>Saved Address</label>
    <nameField>
        <displayFormat>ADDR-{0000}</displayFormat>
        <label>Saved Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Saved Addresses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>