force-app/main/default/objects/Saved_Address__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Saved Addresses</relationshipLabel>
    <relationshipName>Saved_Addresses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The customer this delivery address belongs to — the storefront's My Account "Saved Addresses" section only ever shows/edits addresses scoped to the logged-in shopper's own Account.Id.</description>
</CustomField>