force-app/main/default/objects/Saved_Address__c/fields/Line1__c.field-meta.xml
<CustomField>
    <fullName>Line1__c</fullName>
    <label>Address Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>